# MyNiriShell

./: .copilot-instructions.md  .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: debug-mode-instructions.agent.md  rust-reviewer_agent.md  se-security-reviewer.agent.md
.github/instructions/: agent-selection-policy.md  code-block-minimalism.md  dependency-minimalism.md  no-adwaita.md  prompt-clarification-policy.md  rust-coding-conventions.md  ui-standards.md
mockup/: filemanager-mockup.html  niri_desktop_mockup.html  niri_lock_screen.html  niri_notification_center.html  niri_notification_toasts.html  niri_polkit_agent.html  niri_quick_settings_clean.html
niri-dock/: Cargo.toml
niri-dock/src/: dock_backend.rs  dock_ui.rs  main.rs
niri-launcher/: Cargo.toml
niri-launcher/src/: launcher_backend.rs  launcher_ui.rs  main.rs
niri-panel/: Cargo.toml
niri-panel/src/: main.rs  panel_backend.rs  panel_ui.rs
niri-shell/: Cargo.toml  README.md  TODO.md  niri-shell.service
niri-shell/src/: dock_backend.rs  dock_ui.rs  error.rs  launcher_backend.rs  launcher_ui.rs  main.rs  media.rs  notification_daemon.rs  notification_ui.rs  osd_ui.rs  panel_backend.rs  panel_ui.rs  polkit_agent.rs  polkit_ui.rs  power_backend.rs  power_ui.rs  quick_settings_backend.rs  quick_settings_ui.rs  screenshot_ui.rs  shell.rs  state.rs  sysinfo.rs  weather.rs
niri-shell/src/ipc/: mod.rs  types.rs
niri-shell/src/shell/: config.rs  input.rs  launcher.rs  monitor.rs  panel.rs  protocol.rs  window_manager.rs
