[package]
name = "niri-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
glib = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
gtk4-layer-shell = "0.8"
libc = "0.2"
ureq = "3.3.0"
zbus = "4.1"
zbus_macros = "4.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
